<resources>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="star">Star</string>
    <string name="booking">Booking</string>
    <string name="settings">Settings</string>
    <string name="featured">Featured (5)</string>
    <string name="favorites">Favorites (1)</string>
    <string name="all">All (13)</string>
    <string name="speciality">Speciality</string>
    <string name="surname">Sur Name</string>
    <string name="FirstName">First Name</string>
    <string name="first_free_consultation">1st free consultation is available</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="member_since">Member Since: %s</string>
    <string name="respnse_time">Avg Response Time: 1day</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Est ultricies integer quis auctor elit. A condimentum vitae sapien pellentesque. Tincidunt arcu non sodales neque sodales ut etiam.</string>
    <string name="lorem_ipsum_small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="another_info">Another Info</string>
    <string name="schedule_lawyer">Schedule a Lawyer</string>
    <string name="rankingString">%d/%d</string>
</resources>