<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/detailTopCardViewContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardview_height_large"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_xsmall"
        android:elevation="@dimen/margin_xsmall"
        app:cardCornerRadius="@dimen/margin_xsmall">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detailVerifiedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xxsmall"
                android:layout_marginEnd="@dimen/margin_xxxxlarge"
                android:textColor="@color/colorGrey30"
                android:fontFamily="@font/sans_light"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tool:text="@string/app_name" />

            <ImageView
                android:id="@+id/detailPersonalImage"
                android:layout_width="@dimen/cardview_height_large"
                android:layout_height="@dimen/cardview_height_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/face5" />

            <TextView
                android:id="@+id/detailFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/FirstName"
                android:textStyle="bold"
                android:fontFamily="@font/sans"
                app:layout_constraintBottom_toBottomOf="@id/detailPersonalImage"
                app:layout_constraintStart_toEndOf="@id/detailPersonalImage"
                app:layout_constraintTop_toTopOf="@id/detailPersonalImage"
                app:layout_constraintVertical_bias="0.36" />

            <TextView
                android:id="@+id/detailSurName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xxxxsmall"
                android:text="@string/surname"
                android:fontFamily="@font/sans"
                app:layout_constraintStart_toStartOf="@id/detailFirstName"
                app:layout_constraintTop_toBottomOf="@id/detailFirstName" />

            <TextView
                android:id="@+id/detailSpecialitye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:text="@string/speciality"
                android:fontFamily="@font/sans_light"
                app:layout_constraintStart_toStartOf="@+id/detailSurName"
                app:layout_constraintTop_toBottomOf="@+id/detailSurName" />

            <TextView
                android:id="@+id/itemRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_xxlarge"
                android:layout_marginBottom="@dimen/margin_large"
                android:text="$55.50"
                android:fontFamily="@font/sans_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/itemRateRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="2dp"
                android:text="/hr"
                android:textSize="@dimen/font_xxsmall"
                app:layout_constraintBottom_toBottomOf="@+id/itemRate"
                app:layout_constraintStart_toEndOf="@+id/itemRate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>